--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ build-backend = "hatchling.build"
 dev = [
     "ruff>=0.14.14",
     "ty>=0.0.14",
+    "mkdocs>=1.6.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.27.0",
 ]
 
 [tool.hatch.build.targets.wheel]
