--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,18 +4,11 @@ on:
   release:
     types: [published]
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release (e.g., 0.1.0)'
-        required: true
-        type: string
 
 jobs:
-  release:
+  build:
+    name: Build distribution
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
 
     steps:
     - uses: actions/checkout@v4
@@ -34,20 +27,61 @@ jobs:
     - name: Install dependencies
       run: uv sync --all-extras
 
-    - name: Run full release pipeline
-      run: just release
+    - name: Run checks
+      run: just check
+
+    - name: Run tests
+      run: just test
 
     - name: Build package
       run: just build
 
-    # - name: Publish to PyPI
-    #   uses: pypa/gh-action-pypi-publish@release/v1
-    #   with:
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
-    #     skip-existing: true
-
-    - name: Upload release artifacts
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: release-dist
+        name: python-package-distributions
         path: dist/
+
+  publish-to-pypi:
+    name: Publish to PyPI
+    if: github.event_name == 'release'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/cvecli
+    permissions:
+      id-token: write  # Required for trusted publishing
+
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+
+  publish-to-testpypi:
+    name: Publish to TestPyPI
+    if: github.event_name == 'workflow_dispatch'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/p/cvecli
+    permissions:
+      id-token: write  # Required for trusted publishing
+
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+
+    - name: Publish to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
